--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-scripts": "3.3.0",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-bootstrap-typeahead": "^3.4.5"
   }
 }
