--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,11 @@
     "128": "assets/images/icon-128.png"
   },
   "default_locale": "en",
+  "background": {
+    "scripts": [
+      "scripts/background.js"
+    ]
+  },
   "browser_action": {
     "default_icon": {
       "19": "assets/images/icon-19.png",
