--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
-  
+
 {
   "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": true,
   "trailingComma": "all",
   "semi": false,
-  "bracketSpacing": false
+  "bracketSpacing": false,
+  "arrowParens": "avoid"
 }
