--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-typeahead": "^3.4.7",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.91",
+    "@types/classnames": "^2.2.10",
     "@types/react-bootstrap-typeahead": "^3.4.5"
   }
 }
