Avoid loading experiments several times at the same time; added unlimited storage permission; removed console.log; implemented empty state; global state login

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,7 @@
     "cookies",
     "storage",
     "tabs",
+    "unlimitedStorage",
     "http://*.wix.com/*",
     "http://*.wixsite.com/*",
     "http://*.wixapps.net/*",
