--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "petri-sidekick-2",
   "version": "2.0.0",
   "private": true,
+  "author": {
+    "name": "Vytenis Urbonavicius",
+    "url": "https://github.com/vytenisu",
+    "email": "vytenisu@wix.com"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
