--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "bootstrap": "^4.4.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.67",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-typeahead": "^3.4.7",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +49,6 @@
   "devDependencies": {
     "@types/chrome": "0.0.91",
     "@types/classnames": "^2.2.10",
-    "@types/react-bootstrap-typeahead": "^3.4.5"
+    "@types/react-bootstrap-typeahead": "^3.4.6"
   }
 }
