--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-scripts": "3.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chrome": "0.0.91",
+    "@types/chrome": "^0.0.246",
     "@types/classnames": "^2.2.10",
     "@types/react-bootstrap-typeahead": "^3.4.6"
   }
