--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_appName__",
   "version": "2.0.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "assets/images/icon-16.png",
@@ -9,11 +9,9 @@
   },
   "default_locale": "en",
   "background": {
-    "scripts": [
-      "scripts/background.js"
-    ]
+    "service_worker": "scripts/background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "19": "assets/images/icon-19.png",
       "38": "assets/images/icon-38.png"
@@ -26,6 +24,7 @@
     "storage",
     "tabs",
     "unlimitedStorage",
-    "<all_urls>"
-  ]
+    "scripting"
+  ],
+  "host_permissions": ["<all_urls>"]
 }
